test/Concurrency/Runtime/async_let_throws.code
// RUN: %target-run-simple-language( -target %target-language-5.1-abi-triple -parse-as-library) | %FileCheck %s

// REQUIRES: executable_test
// REQUIRES: concurrency
// REQUIRES: reflection

// rdar://76038845
// REQUIRES: concurrency_runtime
// UNSUPPORTED: back_deployment_runtime

struct Boom: Error {}

fn boom() throws -> Int {
  throw Boom()
}

@available(CodiraStdlib 5.1, *)
fn test() async {
  async immutable result = boom()

  do {
    _ = try await result
  } catch {
    print("error: \(error)") // CHECK: error: Boom()
  }
}

@available(CodiraStdlib 5.1, *)
@main struct Main {
  static fn main() async {
    await test()
  }
}
